# agent-sandbox

./: .gitignore  BACKEND_GUIDE.md  CHANGELOG.md  Cargo.toml  PROMPT.md  README.md  ROADMAP.md  ROADMAP_STABLE.md  ROADMAP_V2.md  agentsandbox.toml
crates/agentsandbox-agent/: Cargo.toml
crates/agentsandbox-agent/src/: lib.rs  main.rs
crates/agentsandbox-backend-bubblewrap/: Cargo.toml
crates/agentsandbox-backend-bubblewrap/schema/: extensions.schema.json
crates/agentsandbox-backend-bubblewrap/src/: factory.rs  lib.rs  main.rs
crates/agentsandbox-backend-bubblewrap/tests/: conformance.rs
crates/agentsandbox-backend-docker/: Cargo.toml
crates/agentsandbox-backend-docker/schema/: extensions.schema.json
crates/agentsandbox-backend-docker/src/: factory.rs  lib.rs  main.rs
crates/agentsandbox-backend-docker/tests/: conformance.rs  egress.rs  egress_proxy.rs
crates/agentsandbox-backend-gvisor/: Cargo.toml
crates/agentsandbox-backend-gvisor/schema/: extensions.schema.json
crates/agentsandbox-backend-gvisor/src/: factory.rs  lib.rs  main.rs
crates/agentsandbox-backend-gvisor/tests/: conformance.rs
crates/agentsandbox-backend-libkrun/: Cargo.toml
crates/agentsandbox-backend-libkrun/schema/: extensions.schema.json
crates/agentsandbox-backend-libkrun/src/: lib.rs  main.rs
crates/agentsandbox-backend-libkrun/tests/: conformance.rs
crates/agentsandbox-backend-nsjail/: Cargo.toml
crates/agentsandbox-backend-nsjail/schema/: extensions.schema.json
crates/agentsandbox-backend-nsjail/src/: lib.rs  main.rs
crates/agentsandbox-backend-nsjail/tests/: conformance.rs
crates/agentsandbox-backend-podman/: Cargo.toml
crates/agentsandbox-backend-podman/src/: factory.rs  lib.rs  main.rs
crates/agentsandbox-backend-podman/tests/: conformance.rs
crates/agentsandbox-backend-wasmtime/: Cargo.toml
crates/agentsandbox-backend-wasmtime/schema/: extensions.schema.json
crates/agentsandbox-backend-wasmtime/src/: lib.rs  main.rs
crates/agentsandbox-backend-wasmtime/tests/: conformance.rs
crates/agentsandbox-conformance/: Cargo.toml
crates/agentsandbox-conformance/src/: lib.rs
crates/agentsandbox-core/: Cargo.toml
crates/agentsandbox-core/src/: adapter.rs  compile.rs  conformance.rs  ir.rs  lib.rs  schema.rs  spec.rs
crates/agentsandbox-daemon/: Cargo.toml
crates/agentsandbox-daemon/migrations/: 001_initial.sql  002_backend_handle.sql  003_multitenancy.sql  004_internal_service.sql
crates/agentsandbox-daemon/src/: audit.rs  config.rs  error.rs  external_backend.rs  handlers.rs  lib.rs  main.rs  metrics.rs  reaper.rs  registry.rs  router.rs  state.rs  store.rs
crates/agentsandbox-daemon/src/middleware/: auth.rs
crates/agentsandbox-docker/: Cargo.toml
crates/agentsandbox-docker/src/: egress.rs  lib.rs
crates/agentsandbox-docker/tests/: conformance.rs  egress.rs
crates/agentsandbox-proxy/: Cargo.toml
crates/agentsandbox-proxy/src/: lib.rs
crates/agentsandbox-sdk/: Cargo.toml
crates/agentsandbox-sdk/src/: backend.rs  error.rs  ir.rs  lib.rs  plugin.rs
docs/: api-http-v1.md  deployment.md  getting-started.md  operations-internal.md  smoke-internal.md  spec-v1.md  spec-v1alpha1.md  spec-v1beta1.md  troubleshooting-internal.md
docs/backends/: bubblewrap.md  docker.md  firecracker.md  gvisor.md  libkrun.md  nsjail.md  podman.md  wasmtime.md
examples/: README.md  verify_all.sh
examples/01-hello-sandbox/: README.md  expected_output.txt  run.py
examples/02-code-review-agent/: README.md  agent.py  expected_output.txt
examples/03-dependency-auditor/: README.md  expected_output.txt  package.json  tsconfig.json
examples/03-dependency-auditor/sample/: package.json
examples/04-multi-backend-demo/: README.md  demo.py  expected_output.txt
examples/05-file-stream-demo/: README.md  run.py
examples/python-code-review-agent/: .env.example  README.md  agent.py  requirements.txt
examples/python-code-review-agent/sample_code/: buggy_script.py
examples/ts-dependency-auditor/: .env.example  README.md  package-lock.json  package.json
examples/ts-dependency-auditor/src/: auditor.ts
packaging/examples/: agentsandbox.internal.toml
packaging/systemd/: agentsandbox.service
scripts/: bootstrap_tenant.sh  export_runtime_state.sh  release_check.sh
sdks/python/: pyproject.toml
sdks/python/agentsandbox/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: conftest.py  test_client.py  test_client_unit.py  test_models.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts  integration.test.ts
spec/: sandbox.v1.schema.json  sandbox.v1alpha1.schema.json  sandbox.v1beta1.schema.json
tests/e2e/: README.md  python_truth.py  typescript_truth.mjs
