[workspace]
members = [
    "crates/agentsandbox-agent",
    "crates/agentsandbox-proxy",
    "crates/agentsandbox-sdk",
    "crates/agentsandbox-conformance",
    "crates/agentsandbox-core",
    "crates/agentsandbox-daemon",
    "crates/agentsandbox-backend-bubblewrap",
    "crates/agentsandbox-backend-docker",
    "crates/agentsandbox-backend-gvisor",
    "crates/agentsandbox-backend-libkrun",
    "crates/agentsandbox-backend-nsjail",
    "crates/agentsandbox-backend-podman",
    "crates/agentsandbox-backend-wasmtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.77"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.17"
sqlx = { version = "0.8.1", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
bollard = "0.16"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
config = { version = "0.14", features = ["toml", "yaml"] }
tempfile = "3"
wasmtime = "36.0.7"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
