[package]
name = "agentsandbox-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "agentsandbox_agent"
path = "src/lib.rs"

[[bin]]
name = "agentsandbox-agent"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net"] }
