[package]
name = "agentsandbox-backend-gvisor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gVisor backend plugin for AgentSandbox"

[dependencies]
agentsandbox-sdk = { path = "../agentsandbox-sdk" }
agentsandbox-backend-docker = { path = "../agentsandbox-backend-docker" }
async-trait = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
agentsandbox-conformance = { path = "../agentsandbox-conformance" }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
