[package]
name = "agentsandbox-backend-podman"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Podman backend plugin for AgentSandbox"

[dependencies]
agentsandbox-sdk = { path = "../agentsandbox-sdk" }
agentsandbox-backend-docker = { path = "../agentsandbox-backend-docker" }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
agentsandbox-conformance = { path = "../agentsandbox-conformance" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
