[package]
name = "agentsandbox-backend-wasmtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
agentsandbox-sdk = { path = "../agentsandbox-sdk" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
agentsandbox-conformance = { path = "../agentsandbox-conformance" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
