[package]
name = "agentsandbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types, spec parser and IR for AgentSandbox"

[features]
# Enables the `conformance` module with reusable adapter tests.
# Adapter crates opt in via `features = ["conformance"]` in dev-dependencies.
conformance = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
