[package]
name = "agentsandbox-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP daemon for AgentSandbox"

[dependencies]
agentsandbox-sdk = { path = "../agentsandbox-sdk" }
agentsandbox-core = { path = "../agentsandbox-core" }
agentsandbox-backend-docker = { path = "../agentsandbox-backend-docker" }
agentsandbox-backend-gvisor = { path = "../agentsandbox-backend-gvisor" }
agentsandbox-backend-podman = { path = "../agentsandbox-backend-podman" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
config = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.5"
