[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsandbox"
version = "0.1.0"
description = "Python SDK for AgentSandbox — run LLM-agent code in isolated sandboxes"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.hatch.build.targets.wheel]
packages = ["agentsandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration test requiring the agentsandbox daemon",
]
